@@ -364,3 +364,5 @@ XXXXXXXXXX: Version 0.0.8-ALPHA
 - add italian translation, contributed by Diego Pierotto
 - fix off by one error when selecting tracks in play mode by using number keys,
 found by Thomas Balke
+- DisplayMode is now configurable, found by Thomas Balke. This defines between
+how many different types of information the first line toggles in the player.
